new presentation dates

--- a/Handbook.html
+++ b/Handbook.html
@@ -48,7 +48,7 @@
 <li><strong>Module</strong>: Computer.play(Music, Creativity &amp; Code)<li><strong>Module Credits</strong>: 20<li><strong>Module Leader</strong>:<ul>
 <li><strong>Name</strong>:Dr Federico Reuben<li><strong>Email</strong>: federico.reuben@york.ac.uk<li><strong>Telephone</strong>: (01904) 32 4132<li><strong>Office</strong>: MRC/002</ul>
 
-<p><li><strong>Dates</strong>: January 17 - April 18 2017<li><strong>Spaces</strong>: Rymer Auditorium, MRC Teaching Room<li><strong>Hand-in &amp; Assessment</strong>: Seminar presentation (weeks 5-6 spring term) and written documentation (week 1 summer term)<li><strong>Contact Time</strong>: 30 hours (seminars and workshops), 3 x 20 minute tutorials.<li><strong>Module Feedback</strong>: A tutorial will be arranged in the summer term for feedback.</ul>
+<p><li><strong>Dates</strong>: January 17 - April 18 2017<li><strong>Spaces</strong>: Rymer Auditorium, MRC Teaching Room<li><strong>Hand-in &amp; Assessment</strong>: Seminar presentation (week 6 spring term) and written documentation (week 1 summer term)<li><strong>Contact Time</strong>: 30 hours (seminars and workshops), 3 x 20 minute tutorials.<li><strong>Module Feedback</strong>: A tutorial will be arranged in the summer term for feedback.</ul>
 <h2><a class='anchor' name='Assessment'>Assessment</a></h2>
 <h3><a class='anchor' name='Assessment%20Methods'>Assessment Methods</a></h3>
 <ul>
@@ -61,7 +61,7 @@
 
 <p>The assessment criteria specific to this module will be considered and used as a measure to determine your achievement in the assessment process at the end of the module. Seminars will provide the opportunity to gain new knowledge in computer music, programming and creative applications of technology. The workshops will give you practical experience in coding and interactive music technologies and the opportunity to creatively experiment with computers. Practical work will provide the opportunity to demonstrate technical and creative skills and your involvement with technically challenging problems, creative processes and research activities. The written documentation provides you with an opportunity to demonstrate your level of knowledge and understanding of relevant technical and creative concepts, debates and contexts and to present this information clearly.<h3><a class='anchor' name='Assessment%20Deadlines'>Assessment Deadlines</a></h3>
 <ul>
-<li><strong>Seminar Presentation (10%)</strong>: 10 and 17 February 2017 (in class).<li><strong>Portfolio of Work (60%)</strong>: Performance, improvisation, composition, installation or demonstration. Dates to be negotiated with tutor.<li><strong>Written Documentation (30%)</strong>: 18 April 2017 by 16:00.</ul>
+<li><strong>Seminar Presentation (10%)</strong>: 14 and 17 February 2017 (in class).<li><strong>Portfolio of Work (60%)</strong>: Performance, improvisation, composition, installation or demonstration. Dates to be negotiated with tutor.<li><strong>Written Documentation (30%)</strong>: 18 April 2017 by 16:00.</ul>
 <h3><a class='anchor' name='Learning%20Outcomes'>Learning Outcomes</a></h3>
 
 <p><strong>1st years</strong>: On completion of the module, in their independent work, students should demonstrate Learning Outcomes A1-A8, A10 &amp; A11
@@ -94,7 +94,7 @@
 
 <p><a href="http://subjectguides.york.ac.uk/az.php">E-resources</a> include a large collection of useful <a href="http://yorsearch.york.ac.uk/primo_library/libweb/action/dlSearch.do?&institution=44YORK&azSearch=true&fn=almaAzSearch&query=facet_atoz%2Cexact%2CA">e-journal</a> articles and <a href="http://subjectguides.york.ac.uk/c.php?g=484076&p=3310241">e-books</a> as well as other great music resources including streamable audio and video, electronic scores and databases that you can find in the link below:<pre class='code prettyprint lang-sc'>Computer.url("http://subjectguides.york.ac.uk/c.php?g=484041&amp;p=3547049");</pre>
 
-<p><strong>Software</strong>: In this module, you will learn how to work with the SuperCollider programming language. SuperCollider is free and you can download the latest version here:<pre class='code prettyprint lang-sc'>Computer.url("http://subjectguides.york.ac.uk/c.php?g=484041&amp;p=3547049");</pre>
+<p><strong>Software</strong>: In this module, you will learn how to work with the SuperCollider programming language. SuperCollider is free and you can download the latest version here:<pre class='code prettyprint lang-sc'>Computer.url("http://supercollider.github.io/download");</pre>
 
 <p>You should also download and install the Synthesis Plugins and Extensions:<pre class='code prettyprint lang-sc'>Computer.url("https://github.com/supercollider/sc3-plugins/releases");</pre>
 
